Commit for under construction page

--- a/index.html
+++ b/index.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Graphic Design Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>PinPoint - Under Construction</title>
+  <!-- Ensures mobile browsers render the page at the device’s width -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
+  <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>My Graphic Design Portfolio</h1>
-  
-  <!-- Container with two project rectangles -->
-  <div class="container">
-    <div class="project pinpoint" data-details="details1">
-      <div class="project-overlay"><span>PinPoint</span></div>
-    </div>
-    <div class="project oldcastillo" data-details="details2">
-      <div class="project-overlay"><span>Old Castillo B&B</span></div>
-    </div>
-  </div>
-
-  <!-- Two details panels corresponding to each project -->
-  <div class="project-details down" id="details1">
-    <h2>Project 1: Startup Logo</h2>
-    <p>
-      This project involves creating a hand-crafted, warm logo designed for a startup in the graphic design space.
-    </p>
-  </div>
-  <div class="project-details down" id="details2">
-    <h2>Project 2: PinPoint</h2>
-    <p>
-      This project involves designing a sleek and professional logo with modern typography.
-    </p>
-  </div>
-
-  <script src="script.js"></script>
+  <!-- Replace 'pinpoint-logo.png' with your actual logo file name -->
+  <img src="./assets/images/bredcrum-logo.png" alt="BredCrum Logo" class="logo" />
+  <h1>
+    <img src="./assets/icons/construction-barrier.svg" 
+    alt="construction barrier icon">
+    <img src="./assets/icons/drill.svg"
+    alt="drill icon">
+      The site is going through some changes
+      <img src="./assets/icons/hammer.svg"
+      alt="hammer icon">
+    <img src="./assets/icons/construction-barrier.svg" 
+    alt="construction barrier icon">
+  </h1>
+  <p>Don't worry, give it some time. It'll be back to it's old self soon enough</p>
 </body>
 </html>
