Added favicons and fixed typo (it's -> its)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PinPoint - Under Construction</title>
+  <title>BredCrum - Under Construction</title>
   <!-- Ensures mobile browsers render the page at the device’s width -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
@@ -23,6 +23,6 @@
     <img src="./assets/icons/construction-barrier.svg" 
     alt="construction barrier icon">
   </h1>
-  <p>Don't worry, give it some time. It'll be back to it's old self soon enough</p>
+  <p>Don't worry, give it some time. It'll be back to its old self soon enough</p>
 </body>
 </html>
