Added services page

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <nav class="primary-nav" aria-label="Primary">
       <a href="./index.html#work">work</a>
       <a href="./about.html" aria-current="page">about</a>
+      <a href="./services.html">services</a>
       <a href="./contact.html">contact</a>
     </nav>
   </div>
