--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <nav class="primary-nav" aria-label="Primary">
             <a href="#work">work</a>
             <a href="./about.html">about</a>
+            <a href="./services.html">services</a>
             <a href="./contact.html">contact</a>
         </nav>
     </div>
