--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/tokens.css" />
     <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"
     <!-- If you have a shared main stylesheet, include it before this block -->
     <style>
         /* Base */
@@ -118,6 +119,16 @@
                 padding: var(--lg-space);
             }
         }
+        i {
+            font-size: 10rem;
+                color: var(--surface);
+            text-shadow:  28px 28px 55px #8d8d8d,
+            -28px -28px 55px #ffffff;
+
+            }
+
+            /* optional extra softness */
+        }
     </style>
 </head>
 <body>
@@ -151,6 +162,7 @@
             </article>
 
             <article class="service-card">
+                <i class="fa-solid fa-font"></i>
                 <h2 class="service-title">Logo Design</h2>
                 <p class="service-body">
                     Crafting memorable, distinctive marks tailored to your brand’s story,
