Recolored the service heading

--- a/services.html
+++ b/services.html
@@ -73,6 +73,7 @@
             margin: 0 0 var(--xl-space);
             font-size: var(--header-copy);
             line-height: var(--header-lh);
+            color: var(--accent);
         }
 
         .services-grid {
