Updates wording for services

--- a/services.html
+++ b/services.html
@@ -157,32 +157,41 @@
             <article class="service-card">
                 <h2 class="service-title">Identity Design</h2>
                 <p class="service-body">
-                    Helping you translate your brand’s values and personality into a clear,
-                    systematic visual language that scales.
+                    Helping you translate your brand’s values
+                    and personality into a clear, systematic visual language that scales.
+                    From type systems to color and motion, every element works together to reinforce who you are wherever your
+                    audience sees you.
                 </p>
             </article>
 
             <article class="service-card">
                 <h2 class="service-title">Logo Design</h2>
                 <p class="service-body">
-                    Crafting memorable, distinctive marks tailored to your brand’s story,
-                    context, and real-world applications.
+                    Crafting memorable, distinctive marks tailored to your brand’s
+                    story, context, and real-world applications.
+                    Each logo is refined to perform in every environment. I can give
+                    the right logo to always put your best foot forward.
                 </p>
             </article>
 
             <article class="service-card">
                 <h2 class="service-title">Marketing Materials</h2>
                 <p class="service-body">
-                    Designing print and digital assets—decks, one-pagers, signage, collateral—
+                    Designing print and digital assets like decks, one-pagers, and signage
                     that stay on-grid, on-brand, and easy to use.
+                    Every deliverable is built to maintain consistency
+                    across campaigns while still leaving room for creative expression.
                 </p>
             </article>
 
             <article class="service-card">
                 <h2 class="service-title">Web & Product UI</h2>
                 <p class="service-body">
-                    Building calm, intuitive interfaces and landing pages with token-driven
-                    systems so shipping stays fast and consistent.
+                    Building calm, intuitive interfaces and
+                    landing pages with token-driven systems so
+                    shipping stays fast and consistent. Each design emphasizes clarity,
+                    performance, and personality and will bridge the gap between abstract
+                    brand strategy and real user experience.
                 </p>
             </article>
         </section>
