Compressed project photos

--- a/services.html
+++ b/services.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="stylesheets/tokens.css" />
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    <!-- If you have a shared main stylesheet, include it before this block -->
     <style>
         /* Base */
         html {
@@ -19,6 +18,8 @@
             color: var(--text);
             font: 400 var(--body-copy)/var(--body-lh)
             system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+            padding-inline: 15vw;
+
         }
 
         .container {
