Edited some copy

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <section class="hero">
     <div class="hero-left">
         <h1>Hi, I’m Seth and this is <span class="accent">BredCrum</span>.</h1>
-        <p>I design calm, systematic interfaces and the workflows behind them — clean tokens, tidy grids, and the right amount of personality.</p>
+        <p>I design calm, systematic interfaces and the workflows behind them using clean tokens, tidy grids, and the right amount of personality.</p>
     </div>
 
     <div class="hero-right">
         <h2>Value, not vibes.</h2>
-        <p>I help small teams ship sharper brands and faster UIs by pairing design systems with practical engineering — no drama, just delivery.</p>
+        <p>I help small teams ship sharper brands and faster UIs by pairing design systems with practical engineering.</p>
         <a href="#work" class="cta-btn">View Work</a>
     </div>
 </section>
